fix overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,7 +40,6 @@ html,
 body {
   height: 100%;
   max-width: 100% !important;
-  overflow-x: hidden !important;
 }
 body {
   margin: 0;
